--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,5 @@ nodejs.config.js
 # beejeebus' vim ctags file
 tags
 
-# Compiled TypeScript
-dist/*.js
-dist/package-lock.json
+# Compiled code
+dist/*
