--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/nock": "^9.3.1",
     "@types/node": "^10.12.20",
     "@types/socket.io-client": "^1.4.32",
+    "copy-webpack-plugin": "^4.6.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
