Allow extensions to be built completely seprately from the server

--- a/src/nodejs.config.js.example
+++ b/src/nodejs.config.js.example
@@ -95,7 +95,7 @@ settings = {
   sslCAPath: '',
   baseAuthPath: '/nodejs/',
   extensions: [
-    'example_extension'
+    'example_extension.bundle'
   ],
   clientsCanWriteToChannels: false,
   clientsCanWriteToClients: false,
