--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "@types/express": "^4.16.1",
     "@types/mocha": "^5.2.5",
     "@types/nock": "^9.3.1",
-    "@types/node": "^10.12.20",
+    "@types/node": "^10.12.23",
+    "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
     "copy-webpack-plugin": "^4.6.0",
-    "eslint": "^5.12.1",
+    "eslint": "^5.13.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "mocha": "^5.2.0",
@@ -45,10 +46,10 @@
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "tslint-config-airbnb-base": "^0.2.0",
-    "typescript": "^3.2.4",
+    "typescript": "^3.3.3",
     "uws": "10.148.1",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
     "webpack-node-externals": "^1.7.2"
   }
 }
